...
    const val REMOVE_DATE = "Datum entfernen"
    const val SELECT_COLOR = "Farbe auswählen"
    const val TASK = "Aufgabe"
    const val APPOINTMENT = "Termin"
    const val SAVE = "Speichern"
    const val BACK = "Zurück"
    const val TITLE = "Titel"
    const val NO_DATE = "Kein Datum"
    const val PARTICIPANTS = "Teilnehmer"
    const val COLOR = "Farbe"
    const val DESCRIPTION = "Beschreibung"
    const val DESCRIPTION_OPTIONAL = "Beschreibung (optional)"
    const val DATE = "Datum"
    const val MAX_TITLE_LENGTH = 50
    const val MAX_DESCRIPTION_LENGTH = 250
    const val DATE_PATTERN = "dd.MM.yyyy"
    const val TITLE_FIELD_TEST_TAG = "title_field"
    const val DESCRIPTION_FIELD_TEST_TAG = "description_field"
    const val DROP_DOWN_MENU_TEST_TAG = "drop_down_menu"
}

/**
 * Composable function that sets up the task creation screen and connects it to the [TaskViewModel].
 *
...

        CreateTaskScreenContent(
            uiState = TaskUiState(
                title = "Einkaufen",
                date = LocalDate.now(),
                wgMembers = listOf(
                    WGMemberSelection(id = "1", name = "Max", isSelected = true),
                    WGMemberSelection(id = "2", name = "Lena", isSelected = false),
                    WGMemberSelection(id = "3", name = "Tobi", isSelected = false),
                    WGMemberSelection(id = "4", name = "Julia", isSelected = true),
                    WGMemberSelection(id = "3", name = "Moritz", isSelected = false),
                    WGMemberSelection(id = "4", name = "Isabelle", isSelected = false),
                    WGMemberSelection(id = "5", name = "Lisa", isSelected = false),
...
