...
        RoseIndicator,
        YellowIndicator,
        GreyIndicator
    )

    private val colorNames: Map<Color, String> = mapOf(
        BlueIndicator to "Blau",
        DarkBlueIndicator to "Dunkelblau",
        GreenIndicator to "Grün",
        DarkGreenIndicator to "Dunkelgrün",
        RedIndicator to "Rot",
        OrangeIndicator to "Orange",
        PurpleIndicator to "Lila",
...
