...
private const val TASK_TEXT_FONT_SIZE_SP = 16
private const val TO_DO_PADDING_DP = 16
private const val SECTION_SPACER_HEIGHT_DP = 16
private const val ERROR_TEXT_TOP_PADDING_DP = 12
private const val DATE_FORMAT_PATTERN = "dd.MM.yyyy"
private const val NO_TIME = "Kein Datum"
private const val TO_DO = "To-Do"
private const val WG = "WG"
private const val EPLANT = "eplant"
private const val CALENDER = "Kalender"
private const val LOGO = "WGeplant Logo"
private const val ADD_TASK = "Aufgabe hinzufügen"
private const val TEST_TAG_WG_PROFILE_ICON = "WG Profile Icon"

/**
 * Entry point for the To-Do screen.
 * Collects state and delegates UI rendering to [ToDoScreenContent].
 *
 */
...
